fix: add multi jdk test + collect to list to avoid stream close on java 11